# Toct

./: README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: db.py  main.py  models.py  schemas.py  seed_demo.py  worker.py
backend/app/routes/: backtest.py  compliance.py  market.py  ops.py  risk.py
backend/app/services/: audit.py  backtest.py  risk.py
backend/app/services/MT5 2.rtfd/: TXT.rtf
frontend/: Dockerfile  package.json  tsconfig.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/compliance/: page.tsx
frontend/src/app/market-lab/: page.tsx
frontend/src/app/ops-control/: page.tsx
frontend/src/app/risk/: page.tsx
frontend/src/lib/: api.ts
frontend/src/lib/Q.rtfd/: TXT.rtf
